Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/warnings/AuxiliaryClass/ClassUsingAnotherAuxiliary.out
ClassUsingAnotherAuxiliary.java:10:5: compiler.warn.auxiliary.class.accessed.from.outside.of.its.source.file: AnAuxiliaryClass, NotAClassName.java
- compiler.err.warnings.and.werror
1 error
1 warning
